# cicd-budgeting

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
src/: main.py
src/etl/: download_dataset.py  transform.py  uploader.py
