[metadata]
name = project-name
version = 0.1.0
author = Your Name
author_email = silicon.rohan@gmail.com
description = Project used to implement end to end cicd process for creating ETL pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Data-Visualization-Analytics/cicd-budgeting
project_urls =
    Bug Tracker = https://github.com/Data-Visualization-Analytics/cicd-budgeting/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = {"" = "src"}
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src